This commit adds:
- .github folder
- .vscode settings
- .vscode task and launch and debug
- vscode workspace
- mwlog components and assoc files
- additional pics for cards

--- a/src/client/src/components/contestlog.html
+++ b/src/client/src/components/contestlog.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>contest log page!</h1>
+    <script src="/src/client/src/components/contestLog.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
