--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Logger</title>
     <meta name="description" content="A Radio Logging Application for SWL and Amateur Radio">
-     <meta name="keywords" content="">
+    <meta name="keywords" content="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="sha512-nnzkI2u2Dy6HMnzMIkh7CPd1KX445z38XIu4jG1jGw7x5tSL3VBjE44dY4ihMU1ijAQV930SPM12cCFrB18sVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"
+        integrity="sha512-nnzkI2u2Dy6HMnzMIkh7CPd1KX445z38XIu4jG1jGw7x5tSL3VBjE44dY4ihMU1ijAQV930SPM12cCFrB18sVw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js"
         integrity="sha512-8Y8eGK92dzouwpROIppwr+0kPauu0qqtnzZZNEF8Pat5tuRNJxJXCkbQfJ0HlUG3y1HB3z18CSKmUo7i2zcPpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -26,7 +28,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
     <link rel="stylesheet" href="../styles.css">
@@ -37,12 +39,13 @@
         <div class="container-fluid">
             <div id="row flex-nowrap">
                 <div id="d-flex sidebar-wrapper">
-                    <i class="fa-solid fa-bars fa-2x"></i>       
+                    <i class="fa-solid fa-bars fa-2x"></i>
                     <a class="navbar-brand mb-0 h1" href="#">RadioLogger</a>
-                      <img src="../../../../logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <img src="../../../../logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                     </a>
                     <ul class="sidebar-nav sidebar-brand">
-                        <a class="d-flex align-items-lg-start mb-3 mb-md-0 me-md-auto link-primary text-decoration-none"></a>
+                        <a
+                            class="d-flex align-items-lg-start mb-3 mb-md-0 me-md-auto link-primary text-decoration-none"></a>
                         <div class="collapse navbar-collapse navHeaderCollapse"></div>
                     </ul>
                 </div>
@@ -57,88 +60,99 @@
     <h1>Dashboard</h1>
     <div class="container">
         <div class="d-flex gap-3 flex-wrap">
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/radio_01.jpeg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Shortwave Logging</h5>
-                        <p class="card-text">Log your Shortwave radio DX contacts.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="/swllog" class="m-2 mb-4 btn btn-primary">Shortwave Log</a>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="/images/radio_01.jpeg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Shortwave Logging</h5>
+                    <p class="card-text">Log your Shortwave radio DX contacts.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/radio_02.jpeg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Amateur Radio Logging</h5>
-                        <p class="card-text">Log your Ham Radio Contacts!</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="/hamlog" class="m-2 mb-4 btn btn-primary">Ham Log</a>
+                <a href="/swllog" class="m-2 mb-4 btn btn-primary">Shortwave Log</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/radio_02.jpeg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Amateur Radio Logging</h5>
+                    <p class="card-text">Log your Ham Radio Contacts!</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/radio_03.jpeg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">VHF Logging</h5>
-                        <p class="card-text">Log your 1.25m, 2m, 6m, 10m, 11m contacts</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="/vhflog" class="m-2 mb-4 btn btn-primary">VHF Log</a>
+                <a href="/hamlog" class="m-2 mb-4 btn btn-primary">Ham Log</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/radio_03.jpeg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">VHF Logging</h5>
+                    <p class="card-text">Log your 1.25m, 2m, 6m, 10m, 11m contacts</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/radio_03.jpeg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Contest Logging</h5>
-                        <p class="card-text">Log your DX contest logging. </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="/contestlog" class="m-2 mb-4 btn btn-primary">Contest Log</a>
+                <a href="/vhflog" class="m-2 mb-4 btn btn-primary">VHF Log</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/radio_03.jpeg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Contest Logging</h5>
+                    <p class="card-text">Log your DX contest logging. </p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Scanner Logging</h5>
-                        <p class="card-text">Log your VHF/UHF scanner radio contacts. </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="/scanlog" class="m-2 mb-4 btn btn-primary">Scanner Logging</a>
+                <a href="/contestlog" class="m-2 mb-4 btn btn-primary">Contest Log</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Scanner Logging</h5>
+                    <p class="card-text">Log your VHF/UHF scanner radio contacts. </p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Shortwave Database</h5>
-                        <p class="card-text">Look for things to listen to.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="#" class="m-2 mb-4 btn btn-primary">Go somewhere</a>
+                <a href="/scanlog" class="m-2 mb-4 btn btn-primary">Scanner Logging</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Shortwave Database</h5>
+                    <p class="card-text">Look for things to listen to.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <div class="card mt-3 mr-3">
-                    <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">QSL Database</h5>
-                        <p class="card-text">Look for things you have listened to and or received QSL cards for.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <a href="#" class="m-2 mb-4 btn btn-primary">Go somewhere</a>
+                <a href="/swdb" class="m-2 mb-4 btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/bc250.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">QSL Database</h5>
+                    <p class="card-text">Look for things you have listened to and or received QSL cards for.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
+                <a href="/qsldb" class="m-2 mb-4 btn btn-primary">QSL DB</a>
+            </div>
+            <div class="card mt-3 mr-3">
+                <img class="card-img-top" src="../images/mwradio.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">MW Logging</h5>
+                    <p class="card-text">Log your Medium Wave (MW) contacts.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                <a href="/mwlog" class="m-2 mb-4 btn btn-primary">MW Logging</a>
+            </div>
         </div>
+    </div>
     </div>
     <div class="modal" tabindex="-1">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
             </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
         </div>
-      </div>      
-    <script src="index.js"></script>
+    </div>
+    <script src="/index.js"></script>
 </body>
+
 </html>
