--- a/src/client/src/components/mwlog.html
+++ b/src/client/src/components/mwlog.html
@@ -60,7 +60,7 @@
     </nav>
     <form>
         <div>
-            <h3>Shortwave Log</h3>
+            <h3>MW Log</h3>
         </div>
         <div class="row g-1">
             <div class="col-sm-1">
@@ -82,139 +82,14 @@
             </div>
             <div class="col-sm-1">
                 <label for="number">Frequency:</label>
-                <input type="number" class="form-control" name="number" value="1.800.00" min="1800.00"
-                    max="29700.00">
+                <input type="number" class="form-control" name="number" value="530.00" min="530.00"
+                    max="1701.99">
             </div>
             <div class="col-sm-1">
-                <label for="text">Station:</label>
+                <label for="text">Call Letters:</label>
                 <input type="text" class="form-control" name="text" value="Call Sign">
             </div>
-            <div class="col-sm-1">
-                <label for="text">via:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">Sackville</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Continent:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Country:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">USA</option>
-                <option value="2">Canada</option>
-                <option value="3">Mexico</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Target Continent:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">Asia</option>
-                <option value="2">Africa</option>
-                <option value="3">North America</option>
-                <option value="3">South America</option>
-                <option value="3">Australia</option>
-                <option value="3">Europe</option>
-                <option value="3">Antarctica</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">ITU Region:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">ITU Zone:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="number">SINPO:</label>
-                <input type="number" class="form-control" name="number" value="11111" min="11111"
-                    max="99999">
-            </div>
-            <div class="col-sm-1">
-                <label for="number">SINAD:</label>
-                <input type="number" class="form-control" name="number" value="11111" min="11111"
-                    max="99999">
-            </div>
-            <div class="col-sm-1">
-                <label for="number">R-S-T:</label>
-                <input type="number" class="form-control" name="number" value="111" min="111"
-                    max="999">
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Band:</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option value="120m">120m</option>
-                    <option value="90m">90m</option>
-                    <option value="75m">75m</option>
-                    <option value="60m">60m</option>
-                    <option value="49m">49m</option>
-                    <option value="41m">41m</option>
-                    <option value="31m">31m</option>
-                    <option value="25m">25m</option>
-                    <option value="19m">19m</option>
-                    <option value="16m">16m</option>
-                    <option value="15m">15m</option>
-                    <option value="13m">13m</option>
-                    <option value="11m">11m</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Mode:</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option value="AM">AM</option>
-                    <option value="CW">CW</option>
-                    <option value="LSB">LSB</option>
-                    <option value="USB">USB</option>
-                    <option value="FM">FM</option>
-                    <option value="PSK">PSK</option>
-                    <option value="AFSK">AFSK</option>
-                    <option value="RTTY">RTTY</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Program Language:</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option value="English">English</option>
-                    <option value="Russian">Russian</option>
-                    <option value="French">French</option>
-                    <option value="Spanish">Spanish</option>
-                    <option value="Chinese">Chinese</option>
-                    <option value="Japanese">Japanese</option>
-                    <option value="Korean">Korean</option>
-                </select>
-            </div>
-            <div class="col-sm-1">
-                <label for="text">Season:</label>
-                <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">Winter</option>
-                <option value="2">Spring</option>
-                <option value="3">Summer</option>
-                <option value="4">Fall</option>
-                </select>
-            </div>
+            
             <div>
             <br>
             </div>
