This commit makes many changes and adds:
- Adding packages
- Adding items to gitignore
- fixes to index.js
- fixes countries.json
- adds pics
- adds 404 page(s) and scripts
- adds MW Log to dashboard
- partial fixes to signup

--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -130,7 +130,7 @@
                     <p class="card-text">Log your Medium Wave (MW) contacts.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-                <a href="/mwlog" class="m-2 mb-4 btn btn-primary">MW Logging</a>
+                <a href="./mwlog.html" class="m-2 mb-4 btn btn-primary">MW Logging</a>
             </div>
         </div>
     </div>
