--- a/src/client/src/components/swllog.html
+++ b/src/client/src/components/swllog.html
@@ -133,16 +133,17 @@
                 <label for="text">ITU Region:</label>
                 <select class="form-select" aria-label="Default select example">
                 <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
                 </select>
             </div>
+            // There are 90 ITU zones. This needs to call in some JSON for option values.
             <div class="col-sm-1">
                 <label for="text">ITU Zone:</label>
                 <select class="form-select" aria-label="Default select example">
                 <option selected>Open this select menu</option>
-                <option value="1">One</option>
+                <option value="1">1</option>
                 <option value="2">Two</option>
                 <option value="3">Three</option>
                 </select>
