--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -153,6 +153,7 @@
         </div>
     </div>
     <script src="/index.js"></script>
+    <script defer src="../dashBoard.js"></script>
 </body>
 
 </html>
