--- a/src/client/src/components/scanlog.html
+++ b/src/client/src/components/scanlog.html
@@ -3,15 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Logger</title>
     <meta name="description" content="A Radio Logging Application for SWL and Amateur Radio">
-     <meta name="keywords" content="">
+    <meta name="keywords" content="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="sha512-nnzkI2u2Dy6HMnzMIkh7CPd1KX445z38XIu4jG1jGw7x5tSL3VBjE44dY4ihMU1ijAQV930SPM12cCFrB18sVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"
+        integrity="sha512-nnzkI2u2Dy6HMnzMIkh7CPd1KX445z38XIu4jG1jGw7x5tSL3VBjE44dY4ihMU1ijAQV930SPM12cCFrB18sVw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js"
         integrity="sha512-8Y8eGK92dzouwpROIppwr+0kPauu0qqtnzZZNEF8Pat5tuRNJxJXCkbQfJ0HlUG3y1HB3z18CSKmUo7i2zcPpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -26,40 +28,87 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
-    <link rel="stylesheet" href="styles.css">
+    <link type="text/css" href="styles.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top bg-primary" role="navigation">
-        
+
         <div class="container-fluid">
             <div id="row flex-nowrap">
                 <div id="d-flex sidebar-wrapper">
-                    <i class="fa-solid fa-bars fa-2x"></i>    
+                    <i class="fa-solid fa-bars fa-2x"></i>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>    
+                    <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand mb-0 h1" href="#">RadioLogger</a>
                     <ul class="sidebar-nav sidebar-brand">
-                        <a class="d-flex align-items-lg-start mb-3 mb-md-0 me-md-auto link-primary text-decoration-none"></a>
+                        <a
+                            class="d-flex align-items-lg-start mb-3 mb-md-0 me-md-auto link-primary text-decoration-none"></a>
                         <div class="collapse navbar-collapse navHeaderCollapse"></div>
                     </ul>
                 </div>
             </div>
         </div>
-        <p><i class="fa-solid fa-toggle-off fa-fw fa-2x"></i></p> <!-- Light/Dark Theme Switch-->
-        <p><i class="fa-solid fa-toggle-on fa-2x fa-fw"></i></p> <!-- Light/Dark Theme Switch -->
+        <i id="darkBtn" class="fa-solid fa-toggle-off fa-fw fa-2x"></i></p> <!-- Light/Dark Theme Switch--></li>
+        <script>
+            var darkBtn = document.getElementById('darkBtn');
+            darkBtn.addEventListener('click', function () {
+                toggleDark();
+            });
+
+            function toggleDark() {
+                /* Changing body class
+                var body = document.body;
+                if (body.classList.contains("dark-mode") != true) {
+                    body.classList.toggle("dark-mode");
+                }*/
+            
+                // Changing navbar classes
+                var nav = document.getElementById('navbar');
+                nav.classList.toggle("navbar-dark");
+                nav.classList.toggle("bg-dark");
+            
+                // Change button classes
+                darkBtn.classList = "fa-solid fa-toggle-on";
+                navBtn.classList = 'btn btn-outline-warning btn-sm';
+            }
+            
+            
+            // Light Mode Functions
+            function toggleLight() {
+                // Changing body class
+                var body = document.body;
+                if (body.classList.contains("dark-mode") == true) {
+                    body.classList.toggle("dark-mode");
+                }
+            
+                // Changing navbar class
+                var nav = document.getElementById('navbar');
+                nav.classList.toggle("navbar-dark");
+                nav.classList.toggle("bg-dark");
+            
+                // Change button classes
+                darkBtn.classList = 'btn btn-outline-dark';
+                lightBtn.classList = 'btn btn-outline-dark';
+                navBtn.classList = 'btn btn-warning btn-sm';
+            
+                // Change button disabled boolean
+                lightBtn.setAttribute('disabled', 'disabled');
+                darkBtn.removeAttribute('disabled');
+            }
+        </script>
         <p><i class="fa-solid fa-envelope fa-2x fa-fw"></i></p>
         <p><i class="fa-solid fa-bell fa-2x fa-fw"></i></p>
         <p><i class="fa-solid fa-circle-user fa-2x fa-fw"></i></p>
     </nav>
     <form>
         <div>
-           <h3>Shortwave Log</h3>
+            <h3>Scanner Logging</h3>
         </div>
         <div class="row g-1">
             <div class="col-sm-1">
@@ -69,36 +118,107 @@
             </div>
             <div class="col-sm-1">
                 <div class="form-group">
-                    <label for="time">Start Time:</label>
+                    <label for="time">Stop Time:</label>
                     <input type="time" class="form-control form-group" id="datetimepicker">
                 </div>
             </div>
             <div class="col-sm-1">
-                <div class="form-group">
-                    <label for="time">Start Time:</label>
-                    <input type="time" class="form-control form-group" id="datetimepicker">
+                <label for="number">Frequency:</label>
+                <input type="number" class="form-control" lang="en" name="number" value="30,000" min="30,000.00"
+                    max="1299999.00" step="0.00125">
+            </div>
+            <div class="col-sm-1">
+                <label for="text">Band:</label>
+                <select class="form-select" aria-label="Default select example">
+                    <option value="VHF Low">VHF Low</option>
+                    <option value="VHF High">VHF High</option>
+                    <option value="UHF Low">UHF Low</option>
+                    <option value="UHF High">UHF High</option>
+                </select>
+            </div>
+            <div>
+                <label class="screen-reader-only" for="choice">Repeater?</label>
+                <span aria-hidden="true">No</span>
+                <input type="range" max="1" id="choice" name="choice">
+                <span aria-hidden="true">Yes</span>
+            </div>
+            <br>
+            <div class="col-lg-2 mb-3">
+                <label for="formFileMultiple" class="form-label">Upload Log Files:</label>
+                <input class="form-control" type="file" id="formFileMultiple" multiple>
+            </div>
+            <br>
+            <br>
+            <div class="col-lg-2 mb-3">
+                <label for="formFileMultiple" class="form-label">Export Log Files:</label>
+                <input class="form-control" type="file" id="formFileMultiple" multiple>
+            </div>
+            <br>
+            <div>
+            <a class="btn btn-primary btn" href="#">
+                <i class="fa-solid fa-floppy-disk fa-lg col-xs-5"></i> Save Log </a>
+            <a class="btn btn-danger" href="#">
+                <i class="fa-solid fa-trash fa-lg"></i> Delete Log </a>
+            <a class="btn btn-secondary " href="#">
+                <i class="fa-solid fa-edit fa-lg"></i> Edit Log </a>
+            </div>
+            <br>
+            <br>
+            <br>
+        </div>
+    </form>
+    <hr><section>
+        <div>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+        </section>
+    <div class="modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
-    </form>
-    <div class="modal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>      
-    <script src="/index.js"></script>
-    <script defer src="/src/client/src/components/scanLog.js"></script>
+    </div>
+    <script src="/index.js" type="text/javascript"></script>
+    <script defer src="./src/client/src/components/scanLog.js" type="text/javascript"></script>
 </body>
+
 </html>
