--- a/src/client/src/components/signup.css
+++ b/src/client/src/components/signup.css
@@ -12,6 +12,7 @@ body {
   align-items: center;
   padding: 10px;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  overflow: hidden;
 }
 .container {
   max-width: 700px;
