--- a/src/client/src/components/signup.html
+++ b/src/client/src/components/signup.html
@@ -28,12 +28,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <script src="./node_modules/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
   <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
   <link rel="stylesheet" href="/public/styles.css">
-  <link rel="stylesheet" href="../../signup.css">
+  <link rel="stylesheet" href="/src/client/src/components/signup.css">
 </head>
 
 <body>
@@ -146,8 +145,8 @@
       <button type="button" class="btn btn-primary">Signup</button>
     </form>
   </div>
-  <script src="index.js"></script>
-  <script defer src="signUp.js"></script>
+  <script src="/index.js"></script>
+  <script defer src="/src/client/src/components/signUp.js"></script>
 </body>
 
 </html>
