--- a/src/client/src/components/signup.html
+++ b/src/client/src/components/signup.html
@@ -36,37 +36,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top bg-primary" role="navigation">
-    <div class="container-fluid">
-      <div id="row flex-nowrap">
-        <div id="d-flex sidebar-wrapper">
-          <i class="fa-solid fa-bars fa-2x"></i>
-          <a class="navbar-brand mb-0 h1" href="#">RadioLogger</a>
-          <img src="/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-          </a>
-          <ul class="sidebar-nav sidebar-brand">
-            <a class="d-flex align-items-lg-start mb-3 mb-md-0 me-md-auto link-primary text-decoration-none"></a>
-            <div class="collapse navbar-collapse navHeaderCollapse"></div>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <p><i class="fa-solid fa-toggle-off fa-fw fa-2x"></i></p> <!-- Light/Dark Theme Switch-->
-    <p><i class="fa-solid fa-toggle-on fa-2x fa-fw"></i></p> <!-- Light/Dark Theme Switch -->
-    <p><i class="fa-solid fa-envelope fa-2x fa-fw"></i></p>
-    <p><i class="fa-solid fa-bell fa-2x fa-fw"></i></p>
-    <p><i class="fa-solid fa-circle-user fa-2x fa-fw"></i></p>
-  </nav>
+  
   <div class="container">
     <h1 class="title">Registration</h1>
     <form action="#">
       <div class="user-details">
         <div class="input-box">
           <span class="deatils">First Name</span>
-          <input type="text" placeholder="Enter Your Name" required />
-        </div>
-        <div class="input-box">
-          <span class="deatils">Middle Initial</span>
           <input type="text" placeholder="Enter Your Name" required />
         </div>
         <div class="input-box">
@@ -85,7 +61,7 @@
           </div>
         </div>
         <div class="input-box">
-          <span class="deatils">Call Sign</span>
+          <span class="details">Call Sign</span>
           <input type="text" placeholder="Enter Your Name" required />
         </div>
         <div class="mb-3">
