--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel='stylesheet' type='text/css' href='/public/styles.css'>
 </head>
 
 <body>
